--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -20,4 +20,10 @@
         color: #FFFFFF;
         font-size: 16px;
     }
+    &_mini {
+        width: 135px;
+        height: 44px;
+        // background: #C70101;
+        font-size: 14px;
+    }
 }
