--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -37,6 +37,12 @@
     }
     &__content {
         margin-top: 60px;
+        display: none;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
     &-item {
         width: 300px;
@@ -44,6 +50,7 @@
         border: 2px solid #E8E8E8;
         padding: 20px 20px 26px 20px;
         overflow: hidden;
+        margin-bottom: 20px;
         &__img {
             max-width: 100%;
             height: 200px;
@@ -114,12 +121,13 @@
             }
         }
         &__list {
+            position: relative;
             width: 50%;
             margin-left: 20px;
             transform: translateX(0%);
             padding-right: 20px;
             transition: 0.5s all;
-            padding-left: 0px;
+            padding-left: 19px;
             margin-bottom: 0px;
             list-style-type: none;
             &_active {
@@ -127,10 +135,35 @@
                 margin-left: 0px;
             }
             li {
+                position: relative;
                 font-style: normal;
                 font-weight: 300;
                 font-size: 14px;
                 color: #555555;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: #C70101;
+                    left: -14px;
+                    top: 9px;
+                }
+            }
+        }
+        &__back {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(calc(-50% - 19px));
+            display: block;
+            color: #C70101;
+            font-size: 14px;
+            font-weight: 500;
+            text-decoration: underline;
+            text-transform: uppercase;
+            &:hover {
+                color: #C70101;
             }
         }
     }
