--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -36,8 +36,13 @@
         font-weight: 500;
         text-align: center;
     }
-    &_mini {
-        min-height: 140px;
+    .error {
+        border: 1px solid red;
+    }
+    label.error {
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
     }
 }
 #consultation, #order, #thanks {
